# KIMServer

./: .gitignore  LICENSE  README.md
source/: CMakeLists.txt  mainNode.cpp  mainPresident.cpp
source/Client/: KakaIMClient.cpp  KakaIMClient.h  KakaIMConfigs.cpp  KakaIMConfigs.h  mainClient.cpp
source/Client/AuthenticationModule/: AuthenticationModule.cpp  AuthenticationModule.h
source/Client/GroupChatModule/: ChatGroup.h  GroupChatMessage.h  GroupChatMessageDelegate.h  GroupChatModule.cpp  GroupChatModule.h
source/Client/OnlineStateModule/: OnlineStateModule.cpp  OnlineStateModule.h
source/Client/RosterModule/: FriendRelationDelegate.h  FriendRequest.h  RosterDB.h  RosterModule.cpp  RosterModule.h  User.h
source/Client/ServiceModule/: ServiceModule.h
source/Client/SessionModule/: SessionModule.cpp  SessionModule.h
source/Client/SingleChatModule/: ChatMessage.h  SingleChatMessageDB.h  SingleChatMessageDelegate.h  SingleChatModule.cpp  SingleChatModule.h
source/Common/: KIMDBConfig.h  KIMModule.cpp  KIMModule.h  KakaIMMessageAdapter.cpp  KakaIMMessageAdapter.h
source/Common/ConcurrentQueue/: ConcurrentLinkedQueue.h
source/Common/EventBus/: Event.cpp  Event.h  EventBus.cpp  EventBus.h  EventListener.h
source/Common/Net/Buffer/: Buffer.h  CircleBuffer.cpp  CircleBuffer.h
source/Common/Net/MessageCenterModule/: ConnectionDelegate.h  MessageCenterAdapter.h  MessageCenterModule.cpp  MessageCenterModule.h  MessageFilter.h
source/Common/Net/TCPSocket/: TCPClientSocket.cpp  TCPClientSocket.h  TCPServerSocket.cpp  TCPServerSocket.h  TCPSocket.cpp  TCPSocket.h
source/Common/Net/TCPSocketManager/: TCPSocketManaerAdapter.h  TCPSocketManager.cpp  TCPSocketManager.h  TCPSocketManagerConsignor.h
source/Common/Timer/: Timer.cpp  Timer.h
source/Common/proto/: KakaIMClientPresident.pb.cc  KakaIMClientPresident.pb.h  KakaIMClientPresident.proto  KakaIMMessage.pb.cc  KakaIMMessage.pb.h  KakaIMMessage.proto  KakaIMRPC.pb.cc  KakaIMRPC.pb.h  KakaIMRPC.proto  KakaImmessage.pbobjc.h  KakaImmessage.pbobjc.m  MessageCluster.pb.cc  MessageCluster.pb.h  MessageCluster.proto
source/Common/proto/objc/: KakaImmessage.pbobjc.h  KakaImmessage.pbobjc.m  MessageCluster.pbobjc.h  MessageCluster.pbobjc.m
source/Common/util/: Date.cpp  Date.h  MD5.cpp  MD5.h  cpu_util.h  mem_util.h
source/Common/yaml-cpp/include/: binary.h  emitfromevents.h  emitter.h  eventhandler.h  exceptions.h  mark.h  noncopyable.h  null.h  ostream_wrapper.h  parser.h  yaml.h
source/Common/yaml-cpp/include/contrib/: graphbuilder.h
source/Common/yaml-cpp/include/node/: convert.h  emit.h  impl.h  iterator.h  node.h  parse.h  ptr.h
source/Common/yaml-cpp/include/node/detail/: impl.h  iterator.h  iterator_fwd.h  memory.h  node.h  node_data.h  node_iterator.h  node_ref.h
source/Node/: Node.cpp  Node.h
source/Node/AuthenticationModule/: AuthenticationModule.cpp  AuthenticationModule.h
source/Node/ClusterModule/: ClusterModule.cpp  ClusterModule.h
source/Node/Events/: ClusterDisengagementEvent.h  NodeSecessionEvent.h  NodeShutdownEvent.h  UserLogoutEvent.h
source/Node/GroupCharModule/: GroupChatModule.cpp  GroupChatModule.h
source/Node/GroupChatModule/: GroupChatModule.cpp  GroupChatModule.h
source/Node/KIMNodeModule/: KIMNodeModule.cpp  KIMNodeModule.h
source/Node/Log/: log.h
source/Node/MessageSendServiceModule/: MessageSendServiceModule.cpp  MessageSendServiceModule.h
source/Node/OfflineModule/: OfflineModule.cpp  OfflineModule.h
source/Node/OnlineStateModule/: OnlineStateModule.cpp  OnlineStateModule.h
source/Node/RosterModule/: RosterModule.cpp  RosterModule.h
source/Node/Service/: ClusterService.h  ConnectionOperationService.h  LoginDeviceQueryService.h  MessageIDGenerateService.h  MessagePersistenceService.h  MessageSendService.h  NodeConnectionQueryService.h  SessionQueryService.h  UserRelationService.h
source/Node/SessionModule/: SessionModule.cpp  SessionModule.h
source/Node/SingleChatModule/: SingleChatModule.cpp  SingleChatModule.h
source/President/: President.cpp  President.h
source/President/ClusterManagerModule/: ClusterEvent.h  ClusterManagerModule.cpp  ClusterManagerModule.h
source/President/KIMPresidentModule/: KIMPresidentModule.cpp  KIMPresidentModule.h
source/President/Log/: log.h
source/President/MessageIDGenerateModule/: MessageIDGenerateModule.cpp  MessageIDGenerateModule.h
source/President/NodeLoadBlanceModule/: NodeLoadBlanceModule.cpp  NodeLoadBlanceModule.h
source/President/ServerRelayModule/: ServerRelayModule.cpp  ServerRelayModule.h
source/President/Service/: ConnectionOperationService.h  Node.h  ServerManageService.h  UserStateManagerService.h
source/President/UserStateManagerModule/: UserStateManagerModule.cpp  UserStateManagerModule.h
